<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">Movie</string>
    <string name="tvShow">Tv Show</string>
    <string name="movie">Catalog Movies</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="detail_film">"Detail Film"</string>
    <string name="start">start</string>
    <string name="back">back</string>
    <string name="load_data">Load data</string>
    <string name="gagal_mengambil_data">Gagal mengambil data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
</resources>